--- a/torcs/torcs/Make-config.in
+++ b/torcs/torcs/Make-config.in
@@ -46,12 +46,10 @@ CFLAGSD = -D_SVID_SOURCE -D_BSD_SOURCE -DSHM
 CXXFLAGS =  @CXXFLAGS@ ${CFLAGSD}
 CFLAGS =  @CFLAGS@ ${CFLAGSD}
 
-GL_LIBNAME = @GL_LIBNAME@
+EXT_LIBS = -lpthread @LIBS@
+LDFLAGS =  @LDFLAGS@ -L/usr/lib -L/usr/local/lib -L${EXPORTBASE}/lib
 
-EXT_LIBS = -lpthread -lpng -lz -lglut -l${GL_LIBNAME}GLU -l${GL_LIBNAME}GL @LIBS@
-LDFLAGS =  @LDFLAGS@ @GL_LDFLAGS@ @GLUT_LDFLAGS@ @X_LDFLAGS@ -L/usr/lib -L/usr/local/lib -L${EXPORTBASE}/lib
-
-INCFLAGS =  -I${EXPORTBASE}/include -I/usr/include -I/usr/local/include @X_INCLUDES@ @GL_INCLUDES@ @GLUT_INCLUDES@
+INCFLAGS =  -I${EXPORTBASE}/include -I/usr/include -I/usr/local/include
 
 CPP = @CPP@ $(CPPFLAGS) -M -D__DEPEND__
 
