--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -15,12 +15,12 @@
 #
 ##############################################################################
 
-
 AC_INIT(Make-config.in)
 AM_INIT_AUTOMAKE(torcs, 1.1.0)
 
 dnl Checks for programs.
 AC_PROG_CC
+AC_PROG_CXX
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 
@@ -32,18 +32,20 @@ AC_C_CONST
 AC_C_INLINE
 AC_HEADER_TIME
 
-dnl Checks for library functions.
-AC_PROG_GCC_TRADITIONAL
-
-AC_CHECK_COMPILERS
-
 AC_CHECK_PROG(AR, ar, :, ar, /usr/bin/ar)
 AC_CHECK_PROG(LD, ld, :, ld, /usr/bin/ld)
 
-AC_PATH_X
-TORCS_PATH_X
+AC_C_BIGENDIAN
 
-CPPFLAGS="$CPPFLAGS -L$x_libraries"
+AC_PATH_X
+CFLAGS="-ansi -Wall -Wstrict-prototypes"
+AC_ARG_ENABLE(debug,
+	[  --enable-debug         set the debug mode], 
+	CFLAGS="$CFLAGS -g -DDEBUG -DDEBUG_OUT",
+	CFLAGS="$CFLAGS -O3 -fstrength-reduce -fomit-frame-pointer")
+
+CXXFLAGS="$CFLAGS"
+LDFLAGS="$LDFLAGS -L$x_libraries"
 
 dnl Checks for libraries.
 
@@ -62,26 +64,24 @@ AC_CHECK_LIB(Xt, XtDisplay,,AC_MSG_ERROR([Can't find libXt. Please check your in
 dnl Replace `main' with a function in -lXi:
 AC_CHECK_LIB(Xi, XOpenDevice,,AC_MSG_ERROR([Can't find libXi. Please check your installation and add the correct paths!]))
 dnl Replace `main' with a function in -lXmu:
-AC_CHECK_LIB(Xmu, XmuSimpleErrorHandler,,AC_MSG_ERROR([Can't find libXmu. Please check your installation and add the correct paths!]),-lXt)
+AC_CHECK_LIB(Xmu, XmuSimpleErrorHandler,,AC_MSG_ERROR([Can't find libXmu. Please check your installation and add the correct paths!]))
 
 AC_CHECK_LIB(dl, dlopen,,AC_MSG_ERROR([Can't find libdl. Please check your installation and add the correct paths!]))
 
-dnl Checks for libraries.
-dnl Replace `main' with a function in -lplibsg:
-AC_CHECK_LIB(plibsg, sgVectorProductVec3)
-dnl Replace `main' with a function in -lplibsl:
-AC_CHECK_LIB(plibsl, isWaiting__8slPlayer)
-dnl Replace `main' with a function in -lplibsm:
-AC_CHECK_LIB(plibsm, setMasterVolume__7smMixeri)
-dnl Replace `main' with a function in -lplibssg:
-AC_CHECK_LIB(plibssg, glIsValidContext)
-dnl Replace `main' with a function in -lplibul:
-AC_CHECK_LIB(plibul, ulOpenDir)
-dnl Replace `main' with a function in -lpng:
-AC_CHECK_LIB(png, png_init_io)
+dnl Checks for plib libraries.
+AC_CHECK_LIB(plibsg, main,,AC_MSG_ERROR([Can't find libplibsg. Please check your installation and add the correct paths!]))
+AC_CHECK_LIB(plibsl, main,,AC_MSG_ERROR([Can't find libplibsl. Please check your installation and add the correct paths!]))
+AC_CHECK_LIB(plibsm, main,,AC_MSG_ERROR([Can't find libplibsm. Please check your installation and add the correct paths!]))
+AC_CHECK_LIB(plibssg, main,,AC_MSG_ERROR([Can't find libplibssg. Please check your installation and add the correct paths!]))
+AC_CHECK_LIB(plibul, main,,AC_MSG_ERROR([Can't find libplibul. Please check your installation and add the correct paths!]))
 
-AC_HAVE_GL
-AC_PATH_GLUT
+dnl Replace `main' with a function in -lpng:
+AC_CHECK_LIB(png, png_init_io,,AC_MSG_ERROR([Can't find libpng. Please check your installation and add the correct paths!]))
+AC_CHECK_LIB(z, main,,AC_MSG_ERROR([Can't find libz. Please check your installation and add the correct paths!]))
+
+AC_CHECK_LIB(GL, main,,AC_MSG_ERROR([Can't find libGL. Please check your installation and add the correct paths!]))
+AC_CHECK_LIB(GLU, main,,AC_MSG_ERROR([Can't find libGLU. Please check your installation and add the correct paths!]))
+AC_CHECK_LIB(glut, main,,AC_MSG_ERROR([Can't find libglut. Please check your installation and add the correct paths!]))
 
 AC_OUTPUT(Make-config \
           src/tools/launcher/torcs \
